[workspace]
members = [
    "escrow",
    "contracts/verification",
    "contracts/oracle",
    "contracts/timelock",
    "contracts/treasury",
    "contracts/staking",
    "contracts/mnt-token",
    "contracts/referral",
    "contracts/bridge_receiver",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
